[project]
name = "wein-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.133.0", "uvicorn>=0.41.0", "sqlalchemy>=2.0.47", "asyncpg>=0.31.0", "pydantic-settings>=2.13.1", "pandas>=3.0.1", "seaborn>=0.13.2", "matplotlib>=3.10.8", "scikit-learn>=1.8.0", "httpx>=0.28.1", "ipykernel>=7.2.0", "psycopg2-binary>=2.9.11"]
